--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,13 @@ vignettes/*.pdf
 /*_files/
 # End of https://www.toptal.com/developers/gitignore/api/r
 /.Rhistory
+# folders to ignore
+/MplusFiles
+/Tests
+/temp
 # specific files to ignore:
 Ideas and Checks powerNLSEM.R
 powerNLSEM.Rproj
 .Rbuildignore
+.gitignore
+Mplus Run Models.log
