--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ Encoding: UTF-8
 LazyData: true
 Depends: stringr, lavaan
 RoxygenNote: 7.2.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
