--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,17 @@ export(UPI)
 export(powerNLSEM)
 export(power_search)
 export(simulateNLSEM)
-import(MplusAutomation)
-import(dplyr)
 import(ggplot2)
 import(lavaan)
+import(parallel)
+import(stats)
 import(stringr)
+import(utils)
+importFrom(MplusAutomation,readModels)
+importFrom(MplusAutomation,runModels)
+importFrom(mvtnorm,rmvnorm)
+importFrom(pbapply,pbsapply)
+importFrom(stringr,str_count)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
