Add function that can be used to reanalyse a powerNLSEM object and find required sample sizes per power level.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(SR)
 export(UPI)
 export(powerNLSEM)
 export(power_search)
+export(reanalyse.powerNLSEM)
 export(simulateNLSEM)
 import(ggplot2)
 import(parallel)
