--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: powerNLSEM
 Type: Package
 Title: Model-implied simulation-based power estimation (MSPE) for nonlinear structural equation models (SEM)
-Version: 0.0.2
+Version: 0.1.0
 Authors@R: c(person("Julien Patrick", "Irmer", email = "jirmer@psych.uni-frankfurt.de",
                     comment = c(ORCID = "0000-0002-7544-6483"),
                     role = c("aut", "cre", "cph")))
@@ -15,8 +15,9 @@ LazyData: true
 URL: https://github.com/jpirmer/powerNLSEM
 BugReports: https://github.com/jpirmer/powerNLSEM/issues
 Depends: ggplot2, stats, utils
-Imports: stringr, pbapply, mvtnorm, lavaan (>= 0.6.16), MplusAutomation (>= 0.7-2)
+Imports: stringr, pbapply, mvtnorm, lavaan (>= 0.6.16), MplusAutomation (>= 0.7-2), semTools
 RoxygenNote: 7.2.3
+Roxygen: list(markdown = TRUE)
 Suggests: 
     knitr,
     rmarkdown
