Enable Markdown use in documentation and update DESCRIPTION.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(reanalyse.powerNLSEM)
 export(simulateNLSEM)
 import(ggplot2)
 import(parallel)
+import(semTools)
 import(stats)
 import(utils)
 importFrom(MplusAutomation,readModels)
