Correct bugs, import numDeriv and replace class(...) == comparisons by inherits(..) as suggested by R CMD check.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Version: 0.1.0
 Authors@R: 
     person(c("Julien Patrick", "Irmer"), "jirmer@psych.uni-frankfurt.de", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-7544-6483"))
-Author: Julien Patrick Irmer [aut, cre, cph]
-    (<https://orcid.org/0000-0002-7544-6483>)
+Author: Julien Patrick Irmer [aut, cre, cph] (<https://orcid.org/0000-0002-7544-6483>)
 Maintainer: Julien Patrick Irmer <jirmer@psych.uni-frankfurt.de>
 Description: Model-implied simulation-based power estimation (MSPE) for
     nonlinear (and linear) SEM, path analysis and regression analysis. A
@@ -26,6 +25,7 @@ Depends:
 Imports: 
     lavaan (>= 0.6.16),
     mvtnorm,
+    numDeriv,
     pbapply,
     rlang (>= 1.1.0),
     stringr
