--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(power_search)
 export(reanalyse.powerNLSEM)
 export(simulateNLSEM)
 import(ggplot2)
+import(numDeriv)
 import(parallel)
 import(stats)
 import(utils)
