--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(plot,powerNLSEM)
 S3method(print,powerNLSEM)
+S3method(print,summary.powerNLSEM)
+S3method(summary,powerNLSEM)
 export(FSR)
 export(LMS)
 export(SR)
@@ -15,6 +17,9 @@ import(numDeriv)
 import(parallel)
 import(stats)
 import(utils)
+importFrom(crayon,blue)
+importFrom(crayon,green)
+importFrom(crayon,red)
 importFrom(mvtnorm,rmvnorm)
 importFrom(pbapply,pbsapply)
 importFrom(stringr,str_count)
