Add simulation to check the performance of the method. Add simsem package to imports. Change email address.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Model-implied simulation-based power estimation (MSPE) for
     nonlinear structural equation models (SEM)
 Version: 0.1.0
 Authors@R: 
-    person(c("Julien Patrick", "Irmer"), email = "jirmer@psych.uni-frankfurt.de", role = c("aut", "cre", "cph"),
+    person(c("Julien Patrick", "Irmer"), email = "jpirmer@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-7544-6483"))
 Author: Julien Patrick Irmer [aut, cre, cph] (<https://orcid.org/0000-0002-7544-6483>)
-Maintainer: Julien Patrick Irmer <jirmer@psych.uni-frankfurt.de>
+Maintainer: Julien Patrick Irmer <jpirmer@gmail.com>
 Description: Model-implied simulation-based power estimation (MSPE) for
     nonlinear (and linear) SEM, path analysis and regression analysis. A
     theoretical framework is used to approximate the relation between
@@ -29,7 +29,8 @@ Imports:
     numDeriv,
     pbapply,
     rlang (>= 1.1.0),
-    stringr
+    stringr,
+    simsem
 Suggests: 
     knitr,
     MplusAutomation (>= 0.7-2),
