--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Type: Package
 Package: powerNLSEM
-Title: Model-implied simulation-based power estimation (MSPE) for
-    nonlinear structural equation models (SEM)
+Title: Model-Implied Simulation-Based Power Estimation (MSPE) for Nonlinear Structural Equation Models (SEM)
 Version: 0.1.0
 Authors@R: 
     person(c("Julien Patrick", "Irmer"), email = "jpirmer@gmail.com", role = c("aut", "cre", "cph"),
