--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,13 @@ Maintainer: Julien Patrick Irmer <jpirmer@gmail.com>
 Description: Model-implied simulation-based power estimation (MSPE) for
     nonlinear (and linear) SEM, path analysis and regression analysis. A
     theoretical framework is used to approximate the relation between
-    power and sample size for given type I error rates and effect size.
-    The package offers a smart search algorithm to find the optimal N for
-    given effect sizes type I error rates. Plots can be used to visualize
-    the power relation to N for different parameters of interst (POI).
+    power and sample size for given type I error rates and effect sizes.
+    The package offers an adaptive search algorithm to find the optimal N for
+    given effect sizes and type I error rates. Plots can be used to visualize
+    the power relation to N for different parameters of interest (POI). 
+    Theoretical justifications are given in Irmer et al. 
+    (2024, <doi:10.31219/osf.io/pe5bj>) and detailed description
+    are given in Irmer et al. (in press).
 License: GPL-3
 URL: https://github.com/jpirmer/powerNLSEM
 BugReports: https://github.com/jpirmer/powerNLSEM/issues
