Shorten title, add @return to exported functions, replace dontrun by donttest for executable code and adapt references in documentation for submission to CRAN.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: powerNLSEM
-Title: Model-Implied Simulation-Based Power Estimation (MSPE) for Nonlinear Structural Equation Models (SEM)
+Title: Simulation-Based Power Estimation (MSPE) for Nonlinear SEM
 Version: 0.1.0
 Authors@R: 
     person(c("Julien Patrick", "Irmer"), email = "jpirmer@gmail.com", role = c("aut", "cre", "cph"),
@@ -15,8 +15,8 @@ Description: Model-implied simulation-based power estimation (MSPE) for
     given effect sizes and type I error rates. Plots can be used to visualize
     the power relation to N for different parameters of interest (POI). 
     Theoretical justifications are given in Irmer et al. 
-    (2024, <doi:10.31219/osf.io/pe5bj>) and detailed description
-    are given in Irmer et al. (in press).
+    (2024) <doi:10.31219/osf.io/pe5bj> and detailed description
+    are given in Irmer et al. (2024) <doi:10.3758/s13428-024-02476-3>.
 License: GPL-3
 URL: https://github.com/jpirmer/powerNLSEM
 BugReports: https://github.com/jpirmer/powerNLSEM/issues
