--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ Description: Model-implied simulation-based power estimation (MSPE) for
     given effect sizes and type I error rates. Plots can be used to visualize
     the power relation to N for different parameters of interest (POI). 
     Theoretical justifications are given in Irmer et al. 
-    (2024) <doi:10.31219/osf.io/pe5bj> and detailed description
-    are given in Irmer et al. (2024) <doi:10.3758/s13428-024-02476-3>.
+    (2024a) <doi:10.31219/osf.io/pe5bj> and detailed description
+    are given in Irmer et al. (2024b).
 License: GPL-3
 URL: https://github.com/jpirmer/powerNLSEM
 BugReports: https://github.com/jpirmer/powerNLSEM/issues
