--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Type: Package
 Package: powerNLSEM
 Title: Simulation-Based Power Estimation (MSPE) for Nonlinear SEM
-Version: 0.1.1
+Version: 0.1.2
 Authors@R: 
-    person(c("Julien Patrick", "Irmer"), email = "jpirmer@gmail.com", role = c("aut", "cre", "cph"),
+    person(given = "Julien Patrick", family = "Irmer",
+           email = "jpirmer@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-7544-6483"))
 Author: Julien Patrick Irmer [aut, cre, cph] (<https://orcid.org/0000-0002-7544-6483>)
 Maintainer: Julien Patrick Irmer <jpirmer@gmail.com>
@@ -16,7 +17,7 @@ Description: Model-implied simulation-based power estimation (MSPE) for
     the power relation to N for different parameters of interest (POI). 
     Theoretical justifications are given in Irmer et al. 
     (2024a) <doi:10.31219/osf.io/pe5bj> and detailed description
-    are given in Irmer et al. (2024b).
+    are given in Irmer et al. (2024b) <doi:10.3758/s13428-024-02476-3>.
 License: GPL-3
 URL: https://github.com/jpirmer/powerNLSEM
 BugReports: https://github.com/jpirmer/powerNLSEM/issues
